--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/listWeb"
-        android:name="com.adalbertofjr.discos.ui.fragments.ListaDiscosWebFragment"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:layout="@layout/lista_discos" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <!-- <fragment
+         android:id="@+id/listWeb"
+         android:name="com.adalbertofjr.discos.ui.fragments.ListaDiscosWebFragment"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+         tools:layout="@layout/lista_discos" />-->
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBar"
@@ -25,6 +31,12 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_height_normal"
             app:layout_scrollFlags="scroll|enterAlways" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:tabGravity="fill" />
 
     </android.support.design.widget.AppBarLayout>
 </android.support.design.widget.CoordinatorLayout>
